[package]
name = "rust-constantine"
version = "0.1.0"
edition = "2021"
links = "constantine_ethereum_bls_signatures"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = {version = "0.65.1" }
# bindgen = { git = "https://github.com/rust-lang/rust-bindgen" , rev = "0de11f0a521611ac8738b7b01d19dddaf3899e66" }